--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Homepage</title>
   </head>
   <body>
     <header>
       <div class="header-links-logo">
-        <img src="#" alt="Website logo" />
+       <p>Header logo</p>
 
         <ul class="links">
           <li><a href="#">header link one</a></li>
@@ -20,48 +20,64 @@
       </div>
       <div class="header-title-image">
         <div>
-          <h1>This website is awesome</h1>
-          <p>
+          <strong class="title">This website is awesome</strong>
+          <p class="secondary-text">
             This website has some subtext that goes here under the main title.
             It's a smaller font and color is lower contrast.
           </p>
           <button>Sign up</button>
         </div>
 
-        <div><img src="#" alt="placeholder for image" /></div>
+        <div id="image-holder">
+         <p>this is placeholder for an image</p>
+        </div>
       </div>
     </header>
 
     <main>
-      
       <div>
-        <h3>Some random information</h3>
-        <ul>
-          <li><img src="#" alt="image"></li>
-          <p>this is some subtext under an illustration or image</p>
-          <li><img src="#" alt="image"></li>
-          <p>this is some subtext under an illustration or image</p>
-          <li><img src="#" alt="image"></li>
-          <p>this is some subtext under an illustration or image</p>
-          <li><img src="#" alt="image"></li>
-          <p>this is some subtext under an illustration or image</p>
+        <h3 class="main-title">Some random information</h3>
+        <ul class="main-list">
+          <li>
+            <img src="#" alt="image" />
+            <p>this is some subtext under an illustration or image</p>
+          </li>
+
+          <li>
+            <img src="#" alt="image" />
+            <p>this is some subtext under an illustration or image</p>
+          </li>
+
+          <li>
+            <img src="#" alt="image" />
+            <p>this is some subtext under an illustration or image</p>
+          </li>
+
+          <li>
+            <img src="#" alt="image" />
+            <p>this is some subtext under an illustration or image</p>
+          </li>
         </ul>
       </div>
 
-
       <div>
-        <p>This is an inspiring quote, or and testimonial form a customer. Maybe it's just filling up space, or maybe people will actually read it. who know? All i know is that it looks nice.</p>
+        <p>
+          This is an inspiring quote, or and testimonial form a customer. Maybe
+          it's just filling up space, or maybe people will actually read it. who
+          know? All i know is that it looks nice.
+        </p>
         <p>-Thor, God of Thunder</p>
       </div>
-      
+
       <div>
         <div>
           <strong>Call to action!It's time!</strong>
-          <p>Sign uo for our product by clicking that button right over there!</p>
+          <p>
+            Sign uo for our product by clicking that button right over there!
+          </p>
         </div>
         <button>Sign up</button>
       </div>
-
     </main>
 
     <footer>
