--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="header-links-logo">
-       <p>Header logo</p>
+        <p>Header logo</p>
 
         <ul class="links">
           <li><a href="#">header link one</a></li>
@@ -29,7 +29,7 @@
         </div>
 
         <div id="image-holder">
-         <p>this is placeholder for an image</p>
+          <p>this is placeholder for an image</p>
         </div>
       </div>
     </header>
@@ -37,27 +37,20 @@
     <main>
       <div>
         <h3 class="main-title">Some random information</h3>
-        <ul class="main-list">
-          <li>
-            <img src="#" alt="image" />
-            <p>this is some subtext under an illustration or image</p>
-          </li>
-
-          <li>
-            <img src="#" alt="image" />
-            <p>this is some subtext under an illustration or image</p>
-          </li>
-
-          <li>
-            <img src="#" alt="image" />
-            <p>this is some subtext under an illustration or image</p>
-          </li>
-
-          <li>
-            <img src="#" alt="image" />
-            <p>this is some subtext under an illustration or image</p>
-          </li>
-        </ul>
+        <div class="top-container">
+          <div class="list-data">
+            <div class="empty"></div>
+            <p>this is some subtext under an illustration or image</p></div>
+          <div class="list-data">
+            <div class="empty"></div>
+            <p>this is some subtext under an illustration or image</p></div>
+          <div class="list-data">
+            <div class="empty"></div>
+            <p>this is some subtext under an illustration or image</p></div>
+          <div class="list-data">
+            <div class="empty"></div>
+            <p>this is some subtext under an illustration or image</p></div>
+        </div>
       </div>
 
       <div>
@@ -69,8 +62,8 @@
         <p>-Thor, God of Thunder</p>
       </div>
 
-      <div>
-        <div>
+      <div class="bottom-container">
+        <div class="blue-section">
           <strong>Call to action!It's time!</strong>
           <p>
             Sign uo for our product by clicking that button right over there!
