--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
         </div>
       </div>
 
-      <div>
-        <p>
+      <div class="quote-section">
+        <p class="quote">
           This is an inspiring quote, or and testimonial form a customer. Maybe
           it's just filling up space, or maybe people will actually read it. who
           know? All i know is that it looks nice.
         </p>
-        <p>-Thor, God of Thunder</p>
+        <p class="quoter">-Thor, God of Thunder</p>
       </div>
 
       <div class="bottom-container">
